# ratatalk

./: .gitignore  Cargo.toml  README.md
src/: app.rs  config.rs  error.rs  events.rs  main.rs  persistence.rs
src/ollama/: client.rs  mod.rs  types.rs
src/ui/: chat.rs  input.rs  layout.rs  mod.rs  popup.rs  sidebar.rs
