[package]
name = "ratatalk"
version = "0.1.1"
edition = "2021"
authors = ["Mohammad albarham"]
description = "A terminal chat client for Ollama, built with Rust and ratatui"
license = "MIT"
repository = "https://github.com/mohammad-albarham/ratatalk"
keywords = ["ollama", "llm", "tui", "chat", "terminal"]
categories = ["command-line-utilities"]

[dependencies]
# TUI Framework
ratatui = "0.29"
crossterm = "0.28"

# Async Runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# HTTP Client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# File paths and directories
directories = "5"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Time and IDs
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Utilities
unicode-width = "0.2"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
